# storyteller

./: .env.example  .gitignore  Makefile  Procfile  docker-compose.yaml  storyteller.code-workspace
backend/: .gitignore  .pylintrc  Dockerfile  README.md  env.sh  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/endpoints/: story.py
backend/app/api/health/: health_controller.py  health_service.py
backend/app/core/: config.py
backend/app/db/: mongodb.py  story_crud.py
backend/app/models/: base.py  story.py
backend/app/prompts/: __init__.py  chapter_development.py  image_generation.py  main_image.py  story_outline.py
backend/app/services/: bucket_service.py
backend/app/story_generation/: audio_generation.py  image_generation.py  story_flow.py  test_payload.json  test_story_flow.py
frontend/: Dockerfile  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml
frontend/src/lib/api/: schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/lib/components/ui/: modal.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/create-story/: +page.svelte
frontend/src/routes/story/[id]/: +page.svelte
notebooks/: pruebas_audio.ipynb
requirements/: implementation_plan.md  project_description.md  story_generation_flow.md
