[project]
name = "backend"
version = "0.1.0"
description = "Backend for StoryTeller application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "google-cloud-storage>=2.18.2",
    "langchain-anthropic>=0.2.3",
    "langchain-community>=0.3.3",
    "langchain-core>=0.3.13",
    "langchain-openai>=0.2.3",
    "langchain>=0.3.4",
    "langgraph>=0.2.39",
    "langserve[all]>=0.3.0",
    "motor>=3.6.0",
    "openai>=1.52.2",
    "opencv-python>=4.10.0.84",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "replicate>=1.0.2",
    "scikit-image>=0.24.0",
    "uvicorn>=0.32.0",
]
